# cvxlab

./: pyproject.toml
cvxlab/: defaults.py
cvxlab/backend/: core.py  database.py  index.py  model.py  problem.py  set_table.py
cvxlab/support/: file_manager.py  model_directory.py  sql_manager.py  util.py
cvxlab/templates/: user_defined_constants.py  user_defined_operators.py
docs/source/apidocs/: symbolic_operators.rst  templates.rst
