[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvxlab"
version = "1.0.1b1"
description = "CVXlab - Open-source Python laboratory for convex algebraic modeling"
authors = [
    {name = "Matteo V. Rocco", email = "matteovincenzo.rocco@polimi.it"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "cvxpy>=1.7.3",
    "openpyxl>=3.0.0",
    "pyyaml>=5.4.0",
    "dill>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-mermaid",
    "sphinx-tabs",
    "myst-nb>=1.0.0",
]
solvers = [
    "gurobipy>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/cvxlab/cvxlab"
Documentation = "https://cvxlab.readthedocs.io"
Repository = "https://github.com/cvxlab/cvxlab"
Issues = "https://github.com/cvxlab/cvxlab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cvxlab*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
cvxlab = ["templates/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"